--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "browser-sync": "2.27.5",
         "chokidar": "3.5.2",
         "concurrently": "6.3.0",
+        "gh-pages": "^3.2.3",
         "postcss": "8.3.9",
         "prettier": "2.4.1",
         "pug": "3.0.2",
